; ModuleID = '/home/carl/AnghaBench/vlc/src/input/extr_item.c_vlc_readdir_helper_finish.c'
source_filename = "/home/carl/AnghaBench/vlc/src/input/extr_item.c_vlc_readdir_helper_finish.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vlc_readdir_helper = type { i64, i64, %struct.rdh_slave**, %struct.rdh_slave**, %struct.rdh_slave*, i32 }
%struct.rdh_slave = type { %struct.rdh_slave*, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @vlc_readdir_helper_finish(%struct.vlc_readdir_helper* %0, i32 %1) #0 {
  %3 = alloca %struct.vlc_readdir_helper*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  %6 = alloca %struct.rdh_slave*, align 8
  %7 = alloca i64, align 8
  store %struct.vlc_readdir_helper* %0, %struct.vlc_readdir_helper** %3, align 8
  store i32 %1, i32* %4, align 4
  %8 = load i32, i32* %4, align 4
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %10, label %20

10:                                               ; preds = %2
  %11 = load %struct.vlc_readdir_helper*, %struct.vlc_readdir_helper** %3, align 8
  %12 = getelementptr inbounds %struct.vlc_readdir_helper, %struct.vlc_readdir_helper* %11, i32 0, i32 5
  %13 = load i32, i32* %12, align 8
  %14 = call i32 @rdh_sort(i32 %13)
  %15 = load %struct.vlc_readdir_helper*, %struct.vlc_readdir_helper** %3, align 8
  %16 = load %struct.vlc_readdir_helper*, %struct.vlc_readdir_helper** %3, align 8
  %17 = getelementptr inbounds %struct.vlc_readdir_helper, %struct.vlc_readdir_helper* %16, i32 0, i32 5
  %18 = load i32, i32* %17, align 8
  %19 = call i32 @rdh_attach_slaves(%struct.vlc_readdir_helper* %15, i32 %18)
  br label %20

20:                                               ; preds = %10, %2
  %21 = load %struct.vlc_readdir_helper*, %struct.vlc_readdir_helper** %3, align 8
  %22 = getelementptr inbounds %struct.vlc_readdir_helper, %struct.vlc_readdir_helper* %21, i32 0, i32 4
  %23 = load %struct.rdh_slave*, %struct.rdh_slave** %22, align 8
  %24 = call i32 @free(%struct.rdh_slave* %23)
  store i64 0, i64* %5, align 8
  br label %25

25:                                               ; preds = %52, %20
  %26 = load i64, i64* %5, align 8
  %27 = load %struct.vlc_readdir_helper*, %struct.vlc_readdir_helper** %3, align 8
  %28 = getelementptr inbounds %struct.vlc_readdir_helper, %struct.vlc_readdir_helper* %27, i32 0, i32 0
  %29 = load i64, i64* %28, align 8
  %30 = icmp ult i64 %26, %29
  br i1 %30, label %31, label %55

31:                                               ; preds = %25
  %32 = load %struct.vlc_readdir_helper*, %struct.vlc_readdir_helper** %3, align 8
  %33 = getelementptr inbounds %struct.vlc_readdir_helper, %struct.vlc_readdir_helper* %32, i32 0, i32 3
  %34 = load %struct.rdh_slave**, %struct.rdh_slave*** %33, align 8
  %35 = load i64, i64* %5, align 8
  %36 = getelementptr inbounds %struct.rdh_slave*, %struct.rdh_slave** %34, i64 %35
  %37 = load %struct.rdh_slave*, %struct.rdh_slave** %36, align 8
  store %struct.rdh_slave* %37, %struct.rdh_slave** %6, align 8
  %38 = load %struct.rdh_slave*, %struct.rdh_slave** %6, align 8
  %39 = icmp ne %struct.rdh_slave* %38, null
  br i1 %39, label %40, label %51

40:                                               ; preds = %31
  %41 = load %struct.rdh_slave*, %struct.rdh_slave** %6, align 8
  %42 = getelementptr inbounds %struct.rdh_slave, %struct.rdh_slave* %41, i32 0, i32 1
  %43 = load i32, i32* %42, align 8
  %44 = call i32 @input_item_slave_Delete(i32 %43)
  %45 = load %struct.rdh_slave*, %struct.rdh_slave** %6, align 8
  %46 = getelementptr inbounds %struct.rdh_slave, %struct.rdh_slave* %45, i32 0, i32 0
  %47 = load %struct.rdh_slave*, %struct.rdh_slave** %46, align 8
  %48 = call i32 @free(%struct.rdh_slave* %47)
  %49 = load %struct.rdh_slave*, %struct.rdh_slave** %6, align 8
  %50 = call i32 @free(%struct.rdh_slave* %49)
  br label %51

51:                                               ; preds = %40, %31
  br label %52

52:                                               ; preds = %51
  %53 = load i64, i64* %5, align 8
  %54 = add i64 %53, 1
  store i64 %54, i64* %5, align 8
  br label %25

55:                                               ; preds = %25
  %56 = load %struct.vlc_readdir_helper*, %struct.vlc_readdir_helper** %3, align 8
  %57 = getelementptr inbounds %struct.vlc_readdir_helper, %struct.vlc_readdir_helper* %56, i32 0, i32 0
  %58 = load i64, i64* %57, align 8
  %59 = load %struct.vlc_readdir_helper*, %struct.vlc_readdir_helper** %3, align 8
  %60 = getelementptr inbounds %struct.vlc_readdir_helper, %struct.vlc_readdir_helper* %59, i32 0, i32 3
  %61 = load %struct.rdh_slave**, %struct.rdh_slave*** %60, align 8
  %62 = call i32 @TAB_CLEAN(i64 %58, %struct.rdh_slave** %61)
  store i64 0, i64* %7, align 8
  br label %63

63:                                               ; preds = %77, %55
  %64 = load i64, i64* %7, align 8
  %65 = load %struct.vlc_readdir_helper*, %struct.vlc_readdir_helper** %3, align 8
  %66 = getelementptr inbounds %struct.vlc_readdir_helper, %struct.vlc_readdir_helper* %65, i32 0, i32 1
  %67 = load i64, i64* %66, align 8
  %68 = icmp ult i64 %64, %67
  br i1 %68, label %69, label %80

69:                                               ; preds = %63
  %70 = load %struct.vlc_readdir_helper*, %struct.vlc_readdir_helper** %3, align 8
  %71 = getelementptr inbounds %struct.vlc_readdir_helper, %struct.vlc_readdir_helper* %70, i32 0, i32 2
  %72 = load %struct.rdh_slave**, %struct.rdh_slave*** %71, align 8
  %73 = load i64, i64* %7, align 8
  %74 = getelementptr inbounds %struct.rdh_slave*, %struct.rdh_slave** %72, i64 %73
  %75 = load %struct.rdh_slave*, %struct.rdh_slave** %74, align 8
  %76 = call i32 @free(%struct.rdh_slave* %75)
  br label %77

77:                                               ; preds = %69
  %78 = load i64, i64* %7, align 8
  %79 = add i64 %78, 1
  store i64 %79, i64* %7, align 8
  br label %63

80:                                               ; preds = %63
  %81 = load %struct.vlc_readdir_helper*, %struct.vlc_readdir_helper** %3, align 8
  %82 = getelementptr inbounds %struct.vlc_readdir_helper, %struct.vlc_readdir_helper* %81, i32 0, i32 1
  %83 = load i64, i64* %82, align 8
  %84 = load %struct.vlc_readdir_helper*, %struct.vlc_readdir_helper** %3, align 8
  %85 = getelementptr inbounds %struct.vlc_readdir_helper, %struct.vlc_readdir_helper* %84, i32 0, i32 2
  %86 = load %struct.rdh_slave**, %struct.rdh_slave*** %85, align 8
  %87 = call i32 @TAB_CLEAN(i64 %83, %struct.rdh_slave** %86)
  ret void
}

declare dso_local i32 @rdh_sort(i32) #1

declare dso_local i32 @rdh_attach_slaves(%struct.vlc_readdir_helper*, i32) #1

declare dso_local i32 @free(%struct.rdh_slave*) #1

declare dso_local i32 @input_item_slave_Delete(i32) #1

declare dso_local i32 @TAB_CLEAN(i64, %struct.rdh_slave**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
